compiler/tests/fa/errors/unused_mut.salam
// انتظار: خطا۰۶۹
// زبان: فارسی
تابع اصلی:
    متغیر سن := 50
    چاپ(سن)
تمام
